[project]
name = "python-package-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "changshan", email = "changshanshi@outlook.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "furo>=2024.8.6",
    "myst-parser>=4.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
    "sphinx>=8.1.3",
    "sphinx-autodoc2>=0.5.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autobuild>=2024.10.3",
]
